--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rakib's Portfolio</title>
+    <!-- Google Font connect -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- Stylesheet connect -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Welcome to</h1>
+    <h1>RAKIB NABI World!</h1>
 </body>
 </html>
