--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,8 +13,22 @@
     <!-- Stylesheet connect -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome to</h1>
-    <h1>RAKIB NABI World!</h1>
+    <section>
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="orange-color">Rakib Nabi</span> World!</h1>
+            <h3>Building Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web Development
+                Hero.</p>
+            <a class="link-button" href="https://www.linkedin.com/in/rakib-un-nabi/" target="_blank">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-pic-with-bg.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
