dream-big section added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- Top Section -->
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
@@ -27,6 +28,20 @@
         </div>
         <div class="half-width">
             <img src="images/my-pic-with-bg.png" alt="">
+        </div>
+    </section>
+
+    <!-- Second Section -->
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/dream-big.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a Software Engineer</h3>
+            <p class="dream-text">I'm already learning Web Development. Currently, I know HTML, CSS and JavaScript. I'm learning and improving day by day. My goal is to become a developer first and then transition to Software Engineering.</p>
+            <a class="link-button" target="_blank" href="https://drive.google.com/file/d/1QFiJQmqrsUi_YLAJvW9C0Vk6M6dO3tPs/view?usp=sharing">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
