--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <!-- Top Section -->
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="orange-color">Rakib Nabi</span> World!</h1>
@@ -26,13 +26,14 @@
                 Hero.</p>
             <a class="link-button" href="https://www.linkedin.com/in/rakib-un-nabi/" target="_blank">HIRE ME</a>
         </div>
+
         <div class="half-width">
             <img src="images/my-pic-with-bg.png" alt="">
         </div>
     </section>
 
     <!-- Second Section -->
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/dream-big.png" alt="">
         </div>
@@ -42,6 +43,24 @@
             <h3>Become a Software Engineer</h3>
             <p class="dream-text">I'm already learning Web Development. Currently, I know HTML, CSS and JavaScript. I'm learning and improving day by day. My goal is to become a developer first and then transition to Software Engineering.</p>
             <a class="link-button" target="_blank" href="https://drive.google.com/file/d/1QFiJQmqrsUi_YLAJvW9C0Vk6M6dO3tPs/view?usp=sharing">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
+    <!-- Third Section -->
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-experience" class="half-width">
+                <h1>Full Stack Developer</h1>
+                <h3>2023-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+
+            <div id="web-dev-experience" class="half-width">
+                <h1>Baby Web Developer</h1>
+                <h3>2022-2023 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
         </div>
     </section>
 </body>
